--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
+        "ext-intl",
         "php":                                ">=5.3.3",
         "zendframework/zendframework":           "~2.1"
     },
