--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "ext-intl",
-        "php":                                ">=5.3.3",
-        "zendframework/zendframework":           "~2.1"
+        "ext-intl": "*",
+        "php": ">=5.3.3",
+        "zendframework/zendframework": "~2.1"
     },
     "autoload": {
         "psr-0": {
