--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name":        "ThaDafinser/ZfcDatagrid",
+    "name":        "zf-commons/ZfcDatagrid",
     "description": "Zend Framework 2 Module that provides a datagrid for different datasources and output formats",
     "type":        "library",
     "license":     "WTFPL",
