--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,10 @@
     },
     
     "require-dev": {
-        "phpunit/PHPUnit": "3.7.*"
+        "phpunit/PHPUnit": "3.7.*",
+        "doctrine/doctrine-orm-module": ">=0.7",
+        "codeplex/phpexcel": "~1.7",
+        "tecnick.com/tcpdf": "dev-master"
     },
     
     "suggest" : {
