--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     
     "require-dev": {
         "phpunit/PHPUnit": "3.7.*",
+        "satooshi/php-coveralls": "dev-master",
         "doctrine/doctrine-orm-module": ">=0.7",
         "codeplex/phpexcel": "~1.7",
         "tecnick.com/tcpdf": ">=6.0",
