--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ befor_script:
 
 script:
  - mkdir -p build/logs
- - php vendor/bin/phpunit -c travis.phpunit.xml --coverage-clover build/logs/clover.xml
+ - ./vendor/bin/phpunit -c travis.phpunit.xml --coverage-clover build/logs/clover.xml
