--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
   - 5.4
   - 5.5
 
-befor_script:
+before_script:
  - curl -s https://getcomposer.org/installer | php
  - php composer.phar install --dev --no-interaction
 
