--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ script:
  - mkdir -p build/logs
  - ./vendor/bin/phpunit -c travis.phpunit.xml --coverage-clover build/logs/clover.xml
 
- after_script:
-  - php vendor/bin/coveralls -v
+after_script:
+  - php vendor/bin/coveralls
+ 
