--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ php:
   - 5.5
 
 before_script:
- - curl -s https://getcomposer.org/installer | php
- - php composer.phar install --dev --no-interaction
+ - composer install --dev --no-interaction
 
 script:
  - mkdir -p build/logs
