--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,8 @@
         "phpunit/PHPUnit": "3.7.*",
         "satooshi/php-coveralls": "dev-master",
         
-        "doctrine/doctrine-orm-module": ">=0.7",
-        "zendframework/zend-i18n": ">=2.1",
-        "zendframework/zend-console": ">=2.1",
-        "zendframework/zend-db": ">=2.1"
+        "zendframework/zendframework": ">=2.1",
+        "doctrine/doctrine-orm-module": ">=0.7"
     },
     
     "suggest" : {
