Service optimization / remove doctrine dependency

--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,9 @@
         "psr-0": {
             "ZfcDatagrid\\": "src/",
             "ZfcDatagridTest\\": "tests/"
-        }
+        },
+        "classmap": [
+            "./Module.php"
+        ]
     }
 }
