--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
   - 5.5
 
 before_script:
- - composer install --dev --no-interaction
+ - composer install --prefer-source --dev --no-interaction
 
 script:
  - mkdir -p build/logs
