--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ php:
 matrix:
   allow_failures:
     - php: hhvm
+    - php: 5.3.3
     
 before_script:
  - composer install --prefer-source --dev --no-interaction
