--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ script:
  - php build/coverage-checker.php build/clover.xml 60
 
 after_script:
-  - php vendor/bin/coveralls
- 
+  - php vendor/bin/coveralls --clover build/clover.xml
+  
