--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ before_script:
 
 script:
  - mkdir -p build
- - ./vendor/bin/phpunit -c travis.phpunit.xml --coverage-clover build/clover.xml
- - php build/coverage-checker.php build/clover.xml 60
+ - ./vendor/bin/phpunit -c travis.phpunit.xml --coverage-clover build/logs/clover.xml
+ - php build/coverage-checker.php build/logs/clover.xml 60
 
 after_script:
-  - php vendor/bin/coveralls --clover build/clover.xml
+  - php vendor/bin/coveralls
   
