--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
  - composer install --prefer-source --dev --no-interaction
 
 script:
- - mkdir -p build
+ - mkdir -p build/logs
  - ./vendor/bin/phpunit -c travis.phpunit.xml --coverage-clover build/logs/clover.xml
  - php build/coverage-checker.php build/logs/clover.xml 60
 
