Log what's going on...

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ script:
  - ./vendor/bin/phpunit -c travis.phpunit.xml --coverage-clover build/logs/clover.xml
 
 after_script:
-  - php vendor/bin/coveralls
+  - php vendor/bin/coveralls -v
   
