--- a/composer.json
+++ b/composer.json
@@ -26,20 +26,20 @@
     "require": {
         "php": ">=5.3.3",
         
-        "zendframework/zend-mvc": ">=2.1",
-        "zendframework/zend-modulemanager": ">=2.1",
-        "zendframework/zend-session": ">=2.1",
-        "zendframework/zend-view": ">=2.1",
-        "zendframework/zend-http": ">=2.1",
-        "zendframework/zend-paginator": ">=2.1",
-        "zendframework/zend-cache": ">=2.1"
+        "zendframework/zend-mvc": "~2.2",
+        "zendframework/zend-modulemanager": "~2.2",
+        "zendframework/zend-session": "~2.2",
+        "zendframework/zend-view": "~2.2",
+        "zendframework/zend-http": "~2.2",
+        "zendframework/zend-paginator": "~2.2",
+        "zendframework/zend-cache": "~2.2"
     },
     
     "require-dev": {
-        "phpunit/PHPUnit": "3.7.*",
+        "phpunit/PHPUnit": "~3.7",
         "satooshi/php-coveralls": "dev-master",
         
-        "zendframework/zendframework": ">=2.2",
+        "zendframework/zendframework": "~2.2",
         "doctrine/doctrine-orm-module": ">=0.8"
     },
     
@@ -47,7 +47,7 @@
         "ext-intl": "*",
         "doctrine/doctrine-orm-module": ">=0.8",
         "codeplex/phpexcel": "~1.7",
-        "tecnick.com/tcpdf": ">=6.0"
+        "tecnick.com/tcpdf": "~6.0"
     },
     
     "autoload": {
