--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,19 @@ php:
   - 5.5
   - 5.6
   - hhvm
+  - hhvm-nightly
 
 matrix:
   allow_failures:
     - php: hhvm
+    - php: hhvm-nightly
     - php: 5.6
     
 before_script:
  - composer update --prefer-source
 
 script:
+ - vendor/bin/php-cs-fixer fix -v --dry-run
  - mkdir -p build/logs
  - ./vendor/bin/phpunit -c travis.phpunit.xml --coverage-clover build/logs/clover.xml
 
