--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
  - composer update --prefer-source
 
 script:
- - vendor/bin/php-cs-fixer fix -v --dry-run
+ - vendor/bin/php-cs-fixer fix src --dry-run
  - mkdir -p build/logs
  - ./vendor/bin/phpunit -c travis.phpunit.xml --coverage-clover build/logs/clover.xml
 
