--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,10 @@ php:
 
 matrix:
   allow_failures:
-    - php: hhvm
     - php: hhvm-nightly
 
 before_script:
- - composer update --prefer-source
+ - composer update --prefer-dist
 
 script:
  - vendor/bin/php-cs-fixer fix src --level=psr2 --dry-run -vv
