--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@ language: php
 
 php:
   - 5.3
-  - 5.4
   - 5.5
   - 5.6
+  - 7
   - hhvm
   - hhvm-nightly
 
 matrix:
   allow_failures:
+    - php: 7
     - php: hhvm-nightly
 
 before_script:
