--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
 
     "require": {
-        "php": "~5.4",
+        "php": ">=5.3.23",
         
         "zendframework/zend-mvc": "~2.3",
         "zendframework/zend-modulemanager": "~2.3",
