--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,21 @@ php:
   - hhvm-nightly
 
 matrix:
+  fast_finish: true
   allow_failures:
     - php: hhvm-nightly
 
+# faster builds on new travis setup not using sudo
+sudo: false
+
+cache:
+  directories:
+    - vendor
+    
 before_script:
  - composer self-update
+ 
+install
  - composer update --prefer-dist
 
 script:
