--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ php:
 matrix:
   fast_finish: true
   allow_failures:
+    - php: 7
     - php: hhvm-nightly
 
 # faster builds on new travis setup not using sudo
