--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
   fast_finish: true
   allow_failures:
     - php: 7
+    - php: hhvm
     - php: hhvm-nightly
 
 # faster builds on new travis setup not using sudo
