--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "bootstrap": ">=2.3.x",
     "jquery": ">=1.9.x",
     "jqgrid": ">=4.5.x",
-    "bootstrap-daterangepicker": ">=1.3.0",
+    "bootstrap-daterangepicker": ">=1.3.0"
   },
   "authors": [
     "Martin Keckeis <martin.keckeis1@gmail.com>"
