--- a/composer.json
+++ b/composer.json
@@ -17,36 +17,33 @@
         "email": "martin.keckeis1@gmail.com"
     }],
     
-    "minimum-stability": "dev",
-    
     "config": {
     	"process-timeout": 5000
     },
 
     "require": {
-        "php": "~5.4|~7.0",
+        "php": "~5.5|~7.0",
         
-        "zendframework/zend-mvc": "~2.3",
-        "zendframework/zend-modulemanager": "~2.3",
-        "zendframework/zend-session": "~2.3",
-        "zendframework/zend-view": "~2.3",
-        "zendframework/zend-http": "~2.3",
-        "zendframework/zend-paginator": "~2.3",
-        "zendframework/zend-cache": "~2.3"
+        "zendframework/zend-mvc": "~2.5",
+        "zendframework/zend-modulemanager": "~2.5",
+        "zendframework/zend-session": "~2.5",
+        "zendframework/zend-view": "~2.5",
+        "zendframework/zend-http": "~2.5",
+        "zendframework/zend-paginator": "~2.5",
+        "zendframework/zend-cache": "~2.5"
     },
     
     "require-dev": {
         "phpunit/PHPUnit": "~4.0",
-        "satooshi/php-coveralls": "dev-master",
-        "fabpot/php-cs-fixer": "*@dev",
+        "satooshi/php-coveralls": "~0.6",
+        "fabpot/php-cs-fixer": "1.10.*",
         
-        "zendframework/zendframework": "~2.3",
-        "doctrine/doctrine-orm-module": ">=0.8"
+        "doctrine/doctrine-orm-module": "~0.9"
     },
     
     "suggest" : {
         "ext-intl": "*",
-        "doctrine/doctrine-orm-module": ">=0.8",
+        "doctrine/doctrine-orm-module": "~0.9",
         "phpoffice/phpexcel": "~1.7",
         "tecnick.com/tcpdf": "~6.0"
     },
