--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
         "satooshi/php-coveralls": "~0.6",
         "fabpot/php-cs-fixer": "1.10.*",
         
-        "doctrine/doctrine-orm-module": "~0.9"
+        "doctrine/doctrine-orm-module": "~0.9",
+        "zendframework/zend-db": "~2.5",
+        "zendframework/zend-servicemanager": "~2.5"
     },
     
     "suggest" : {
