--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name":        "thadafinser/zfc-datagrid",
     "description": "Zend Framework 2 Module that provides a datagrid for different datasources and output formats",
     "type":        "library",
-    "license":     "WTFPL",
+    "license":     "MIT",
     "keywords": [
         "ZfcDatagrid",
         "Datagrid",
