tcpdf full path for newer version

--- a/config/zfcdatagrid.local.php.dist
+++ b/config/zfcdatagrid.local.php.dist
@@ -32,7 +32,7 @@ return array(
                 ),
                 
                 // The output+save directory
-                'path' => 'public/download',
+                'path' => getcwd() . 'public/download',
                 
                 'mode' => 'direct'
             )
