many php doc changes some changes from count to empty, for better performance added "zendframework/zend-text": "~2.5" in the json file, its required from the ZendTable

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "zendframework/zend-view": "~2.5",
         "zendframework/zend-http": "~2.5",
         "zendframework/zend-paginator": "~2.5",
-        "zendframework/zend-cache": "~2.5"
+        "zendframework/zend-cache": "~2.5",
+        "zendframework/zend-text": "~2.5"
     },
     
     "require-dev": {
