--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,7 @@
         "zendframework/zend-view": "~2.5",
         "zendframework/zend-http": "~2.5",
         "zendframework/zend-paginator": "~2.5",
-        "zendframework/zend-cache": "~2.5",
-        "zendframework/zend-text": "~2.5"
+        "zendframework/zend-cache": "~2.5"
     },
     
     "require-dev": {
@@ -46,7 +45,8 @@
         "zendframework/zend-console": "~2.5",
         "zendframework/zend-db": "~2.5",
         "zendframework/zend-i18n": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5"
+        "zendframework/zend-servicemanager": "~2.5",
+        "zendframework/zend-text": "~2.5"
     },
     
     "suggest" : {
@@ -54,7 +54,9 @@
         
         "doctrine/doctrine-orm-module": "~0.9",
         "phpoffice/phpexcel": "~1.7",
-        "tecnick.com/tcpdf": "~6.0"
+        "tecnick.com/tcpdf": "~6.0",
+
+        "zendframework/zend-text": "~2.5"
     },
     
     "autoload": {
