--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     },
     
     "require-dev": {
-        "phpunit/PHPUnit": "~4.0",
+        "phpunit/PHPUnit": "~4|~5",
         "satooshi/php-coveralls": "~0.6",
         "fabpot/php-cs-fixer": "1.10.*",
         
