--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
+
 language: php
+
+sudo: false
 
 php:
   - 5.5
@@ -6,21 +9,19 @@ php:
   - 7
   - hhvm
 
-matrix:
-  fast_finish: true
-
-# faster builds on new travis setup not using sudo
-sudo: false
+env:
+  matrix:
+    - DEPENDENCIES="--prefer-lowest --prefer-stable"
+    - DEPENDENCIES=""
 
 before_script:
  - composer self-update
- - composer update --prefer-source -n --verbose
+ - composer update -o --prefer-source $DEPENDENCIES
 
 script:
+ - vendor/bin/phpunit --coverage-clover ./clover.xml
  - vendor/bin/php-cs-fixer fix src --level=psr2 --dry-run -vv
- - mkdir -p build/logs
- - ./vendor/bin/phpunit -c travis.phpunit.xml --coverage-clover build/logs/clover.xml
 
 after_script:
-  - php vendor/bin/coveralls -v
-  
+  - if [ "$TRAVIS_PHP_VERSION" = "7.0" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
+  - if [ "$TRAVIS_PHP_VERSION" = "7.0" ]; then php ocular.phar code-coverage:upload --format=php-clover ./clover.xml; fi
