--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     
     "require-dev": {
         "phpunit/phpunit": "^4.8|^5.2",
-        "fabpot/php-cs-fixer": "^1.11",
+        "friendsofphp/php-cs-fixer": "^1.11",
         
         "doctrine/orm": ">=2.5,<2.7",
         "doctrine/dbal": ">=2.5,<2.7",
