--- a/composer.json
+++ b/composer.json
@@ -26,23 +26,21 @@
     "require": {
         "php": "~5.5|~7.0",
         
-        "zendframework/zend-mvc": "~2.7",
+        "zendframework/zend-mvc": "~2.7|~3.0",
         "zendframework/zend-modulemanager": "~2.5",
         "zendframework/zend-session": "~2.5",
         "zendframework/zend-view": "~2.5",
         "zendframework/zend-http": "~2.5",
         "zendframework/zend-paginator": "~2.5",
         "zendframework/zend-cache": "~2.5",
-        "zendframework/zend-servicemanager": "~2.7"
+        "zendframework/zend-servicemanager": "~2.7|~3.0"
     },
     
     "require-dev": {
         "phpunit/phpunit": "^4.8|^5.2",
         "friendsofphp/php-cs-fixer": "^1.11",
-        
-        "doctrine/orm": ">=2.5,<2.7",
-        "doctrine/dbal": ">=2.5,<2.7",
-        "doctrine/doctrine-orm-module": "^0.9",
+        "doctrine/doctrine-orm-module": "dev-master as 1.2",
+        "doctrine/doctrine-module":  "dev-master",
         
         "zendframework/zend-console": "~2.5",
         "zendframework/zend-db": "~2.5",
@@ -53,10 +51,7 @@
     
     "suggest" : {
         "ext-intl": "*",
-        
-        "doctrine/orm": ">=2.5,<2.7",
-        "doctrine/dbal": ">=2.5,<2.7",
-        "doctrine/doctrine-orm-module": "^0.9",
+        "doctrine/doctrine-orm-module": "for doctrine support",
         
         "phpoffice/phpexcel": "^1.8",
         "tecnickcom/tcpdf": "^6.2",
@@ -64,10 +59,14 @@
         "zendframework/zend-text": "~2.5",
         "zendframework/zend-json": "to support date ranges"
     },
-    
+
     "autoload": {
         "psr-0": {
-            "ZfcDatagrid\\": "src/",
+            "ZfcDatagrid\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-0": {
             "ZfcDatagridTest\\": "tests/"
         }
     }
