--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ language: php
 sudo: false
 
 php:
-  - 5.5
   - 5.6
   - 7
   - hhvm
   - nightly
 
-allow_failures:
+matrix:
+  allow_failures:
   - php: nightly
 
 env:
