--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ env:
     - DEPENDENCIES=""
 
 before_script:
+  - php -i
  - composer self-update
  - composer update -o --prefer-source $DEPENDENCIES
 
