--- a/composer.json
+++ b/composer.json
@@ -37,10 +37,9 @@
     },
     
     "require-dev": {
-        "phpunit/phpunit": "^4.8|^5.2",
+        "phpunit/phpunit": "^5.6.1",
         "friendsofphp/php-cs-fixer": "^1.11",
-        "doctrine/doctrine-orm-module": "dev-master as 1.2",
-        "doctrine/doctrine-module":  "dev-master",
+        "doctrine/doctrine-orm-module": "^1.1.0",
         
         "zendframework/zend-console": "~2.5",
         "zendframework/zend-db": "~2.5",
@@ -61,13 +60,13 @@
     },
 
     "autoload": {
-        "psr-0": {
-            "ZfcDatagrid\\": "src/"
+        "psr-4": {
+            "ZfcDatagrid\\": "src/ZfcDatagrid"
         }
     },
     "autoload-dev": {
-        "psr-0": {
-            "ZfcDatagridTest\\": "tests/"
+        "psr-4": {
+            "ZfcDatagridTest\\": "tests/ZfcDatagridTest"
         }
     }
 }
