--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "zendframework/zend-db": "^2.5",
         "zendframework/zend-i18n": "^2.5",
         "zendframework/zend-text": "^2.5",
-        "zendframework/zend-json": "^2.5",
+        "zendframework/zend-json": "^2.5"
     },
     
     "suggest" : {
