update composer.json added phpoffice/phpexcel and tecnickcom/tcpdfin require-dev fixxed case-sensitive error in `ZfcDatagrid\Renderer\TCPDF`

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,10 @@
         "zendframework/zend-db": "~2.5",
         "zendframework/zend-i18n": "~2.5",
         "zendframework/zend-text": "~2.5",
-        "zendframework/zend-json": "~2.5"
+        "zendframework/zend-json": "~2.5",
+
+        "phpoffice/phpexcel": "^1.8",
+        "tecnickcom/tcpdf": "^6.2"
     },
     
     "suggest" : {
