--- a/composer.json
+++ b/composer.json
@@ -26,14 +26,13 @@
     "require": {
         "php": "~5.6|~7.0",
         
-        "zendframework/zend-mvc": "~2.7|~3.0",
-        "zendframework/zend-modulemanager": "~2.5",
-        "zendframework/zend-session": "~2.5",
-        "zendframework/zend-view": "~2.5",
-        "zendframework/zend-http": "~2.5",
-        "zendframework/zend-paginator": "~2.5",
-        "zendframework/zend-cache": "~2.5",
-        "zendframework/zend-servicemanager": "~2.7|~3.0"
+        "zendframework/zend-mvc": "^3.0",
+        "zendframework/zend-session": "^2.5",
+        "zendframework/zend-view": "^2.5",
+        "zendframework/zend-http": "^2.5",
+        "zendframework/zend-paginator": "^2.5",
+        "zendframework/zend-cache": "^2.5",
+        "zendframework/zend-servicemanager": "^3.0"
     },
     
     "require-dev": {
@@ -41,11 +40,11 @@
         "friendsofphp/php-cs-fixer": "^1.11",
         "doctrine/doctrine-orm-module": "^1.1.0",
         
-        "zendframework/zend-console": "~2.5",
-        "zendframework/zend-db": "~2.5",
-        "zendframework/zend-i18n": "~2.5",
-        "zendframework/zend-text": "~2.5",
-        "zendframework/zend-json": "~2.5"
+        "zendframework/zend-console": "^2.5",
+        "zendframework/zend-db": "^2.5",
+        "zendframework/zend-i18n": "^2.5",
+        "zendframework/zend-text": "^2.5",
+        "zendframework/zend-json": "^2.5"
     },
     
     "suggest" : {
