--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     "require-dev": {
         "phpunit/phpunit": "^5.6.1",
         "friendsofphp/php-cs-fixer": "^1.11",
-        "doctrine/doctrine-orm-module": "^1.1.0",
+        "doctrine/doctrine-orm-module": "^1.1.1",
         
         "zendframework/zend-console": "^2.5",
         "zendframework/zend-db": "^2.5",
@@ -58,11 +58,19 @@
         "zendframework/zend-json": "to support date ranges"
     },
 
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.4-dev",
+            "dev-develop": "2.0-dev"
+        }
+    },
+
     "autoload": {
         "psr-4": {
             "ZfcDatagrid\\": "src/ZfcDatagrid"
         }
     },
+
     "autoload-dev": {
         "psr-4": {
             "ZfcDatagridTest\\": "tests/ZfcDatagridTest"
