--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     },
     
     "require-dev": {
-        "phpunit/phpunit": "^5.6.1",
+        "phpunit/phpunit": "^5.7.14 || ^6.0.7",
         "friendsofphp/php-cs-fixer": "^1.11",
         "doctrine/doctrine-orm-module": "^1.1.1",
         
