--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,15 @@ php:
   - 5.6
   - 7
   - 7.1
+  - 7.2
   - hhvm
   - nightly
 
 matrix:
   allow_failures:
+  - php: 7.2
   - php: nightly
+  - php: hhvm
 
 env:
   matrix:
